  - All SDL1 models are 50% heavier and has 200% more grip.
  - Range of motion for Grape's cannon increased from 45 to 60 degrees.
  - Increased durability of every Power Suit by 100%.

New Weapons:
RANGER
  - AF-W | Assault Rifle
  - EX8 | Assault Rifle
  - EX16 | Assault Rifle
  - EX32 | Assault Rifle
  - EX64 | Assault Rifle
  - Sting Shot M2 | Shotgun
  - Sting Shot M3 | Shotgun
  - Raven Shot | Shotgun
  - Dragon | Shotgun
  - Dragon M2 | Shotgun
  - Dragon M3 | Shotgun
  - Dragon's Breath | Shotgun
  - Royal Flush | Sniper
  - Omega Laser Rifle | Sniper
  - Goliath ZD | Rocket Launcher
  - MLRA-X | Missile Launcher
  - CRUMBLE-J | Grenade Launcher
  - UMA-J | Grenade Launcher

WING DIVER
  - Electric Rapier | Short-Range
  - Electric Rapier 2 | Short-Range
  - Electric Rapier 3 | Short-Range
  - Pulser | Mid-Range Laser
  - Gigawatt Pulser | Mid-Range laser
  - Pale Pulser | Mid-Range Laser
  - SIG Chainsaw | Mid-Range Laser
  - Grom-Z | Mid-Range Electric
  - Dynastrike Ω | Particle Cannons
  - Starburst | Particle Cannons
  - Gleipnir ? | Special Weapons
  - Gleipnir HR | Special Weapons
  - Gleipnir-FF | Special Weapons
  - Plasma Capacitor | Special Weapons
  - Plasma Capacitor YD | Special Weapons
  - Plasma Capacitor ZD | Special Weapons


FENCER
  - Striker DV | CC Strikers
  - Eruption Haken | CC Strikers
  - Screen Shield | Shield
  - Rapid Powerdyne | Artilery
  - Maximum Powerdyne | Artillery
  - Personal Guide Kit | Special
  - Personal Guide Kit M2 | Special
  - Personal Guide Kit M3 | Special
  - Focus Pointer | Special
  - Personal Guide Beacon | Special
  - Personal Guide Beacon M2 | Special
  - Personal Guide Beacon M3 | Special

AIR RAIDER
  - Napalm Plan A | Calling for Support
  - Napalm Plan B | Calling for Support
  - Napalm Plan C | Calling for Support


Weapons I don't know how to fix or if they need a fix:
  - Volcano?
  - Maybe add larger clip to Emerald
  - Eclat
  - Javelin Storm
  - Assault Beetle