@@ -128,7 +128,10 @@ AIR RAIDER
   - Napalm Plan A | Calling for Support
   - Napalm Plan B | Calling for Support
   - Napalm Plan C | Calling for Support
-
+  - Buckdeer 12Y | Special Weapons
+  - Buckdeer 15Y | Special Weapons
+  - Buckdeer 18Y | Special Weapons
+  - Buckdeer XY | Special Weapons
 
 Weapons I don't know how to fix or if they need a fix:
   - Volcano?
